@@ -7,9 +7,11 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
+import java.util.TreeSet;
 
 import org.apache.commons.io.FileUtils;
 import org.commongeoregistry.adapter.Term;
@@ -39,6 +41,7 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
+import org.locationtech.jts.geom.Geometry;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.filter.FilterFactory;
 import org.opengis.filter.sort.SortBy;
@@ -54,7 +57,6 @@ import com.runwaysdk.system.scheduler.AllJobStatus;
 import com.runwaysdk.system.scheduler.ExecutionContext;
 import com.runwaysdk.system.scheduler.JobHistoryRecord;
 import com.runwaysdk.system.scheduler.SchedulerManager;
-import org.locationtech.jts.geom.Geometry;
 
 import net.geoprism.data.importer.BasicColumnFunction;
 import net.geoprism.data.importer.ShapefileFunction;
@@ -64,6 +66,7 @@ import net.geoprism.registry.etl.ValidationProblem.ValidationResolution;
 import net.geoprism.registry.etl.upload.GeoObjectImporter;
 import net.geoprism.registry.etl.upload.ImportConfiguration;
 import net.geoprism.registry.etl.upload.ImportConfiguration.ImportStrategy;
+import net.geoprism.registry.etl.upload.ImportHistoryProgressScribe.Range;
 import net.geoprism.registry.etl.upload.ShapefileImporter;
 import net.geoprism.registry.excel.MapFeatureRow;
 import net.geoprism.registry.io.ConstantShapefileFunction;
@@ -93,18 +96,18 @@ import net.geoprism.registry.test.USATestData;
 
 public class ShapefileServiceTest
 {
-  protected static USATestData         testData;
+  protected static USATestData             testData;
 
-  private static TestAttributeTermTypeInfo testTerm = new TestAttributeTermTypeInfo("testTerm", "testTermLocalName", USATestData.STATE);
+  private static TestAttributeTermTypeInfo testTerm    = new TestAttributeTermTypeInfo("testTerm", "testTermLocalName", USATestData.STATE);
 
-  private static TestAttributeTypeInfo testInteger = new TestAttributeTypeInfo("testInteger", "testIntegerLocalName", USATestData.STATE, AttributeIntegerType.TYPE);
+  private static TestAttributeTypeInfo     testInteger = new TestAttributeTypeInfo("testInteger", "testIntegerLocalName", USATestData.STATE, AttributeIntegerType.TYPE);
 
   @BeforeClass
   @Request
   public static void classSetUp()
   {
     TestDataSet.deleteAllSchedulerData();
-    
+
     testData = USATestData.newTestData();
     testData.setUpMetadata();
 
@@ -316,10 +319,10 @@ public class ShapefileServiceTest
 
     ImportHistory hist = mockImport(config);
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.SUCCESS));
-    
-    Assert.assertEquals(new Long(1011), hist.getWorkTotal());
-    Assert.assertEquals(new Long(1011), hist.getWorkProgress());
-    Assert.assertEquals(new Long(1011), hist.getImportedRecords());
+
+    Assert.assertEquals(Long.valueOf(1011), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(1011), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(1011), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
   }
 
@@ -341,9 +344,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.SUCCESS));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     GeoObject object = ServiceFactory.getRegistryService().getGeoObjectByCode(testData.clientRequest.getSessionId(), "01", USATestData.STATE.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
@@ -373,9 +376,9 @@ public class ShapefileServiceTest
 
     hist = ImportHistory.get(hist.getOid());
     Assert.assertEquals(AllJobStatus.SUCCESS, hist.getStatus().get(0));
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     /*
@@ -383,17 +386,17 @@ public class ShapefileServiceTest
      */
     JSONObject config2 = new JSONObject(hist.getConfigJson());
     config2.remove("historyId");
-    
+
     ImportHistory hist2 = mockImport((GeoObjectImportConfiguration) GeoObjectImportConfiguration.build(config2.toString()));
     Assert.assertTrue(hist2.getStatus().get(0).equals(AllJobStatus.SUCCESS));
-    
+
     Assert.assertNotSame(hist.getOid(), hist2.getOid());
 
     hist2 = ImportHistory.get(hist2.getOid());
     Assert.assertEquals(AllJobStatus.SUCCESS, hist.getStatus().get(0));
-    Assert.assertEquals(new Long(56), hist2.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist2.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist2.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist2.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist2.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist2.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist2.getStage().get(0));
 
     GeoObject object = ServiceFactory.getRegistryService().getGeoObjectByCode(testData.clientRequest.getSessionId(), "01", USATestData.STATE.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
@@ -424,9 +427,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.SUCCESS));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     GeoObject object = ServiceFactory.getRegistryService().getGeoObjectByCode(testData.clientRequest.getSessionId(), "01", USATestData.STATE.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
@@ -468,9 +471,11 @@ public class ShapefileServiceTest
     row.put("NAME", "Alabama2");
     row.put("GEOID", "01");
 
-    GeoObjectImporter importer = new GeoObjectImporter(config, new NullImportProgressListener());
-    importer.setFormatSpecificImporter(new NullFormatSpecificImporter());
-    importer.importRow(new MapFeatureRow(row));
+    try (GeoObjectImporter importer = new GeoObjectImporter(config, new NullImportProgressListener()))
+    {
+      importer.setFormatSpecificImporter(new NullFormatSpecificImporter());
+      importer.importRow(new MapFeatureRow(row, 0L));
+    }
 
     GeoObject object = ServiceFactory.getRegistryService().getGeoObjectByCode(testData.clientRequest.getSessionId(), "01", USATestData.STATE.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
 
@@ -485,44 +490,46 @@ public class ShapefileServiceTest
   public void testImportShapefileNullInteger_Ignore() throws Throwable
   {
     InputStream istream = this.getClass().getResourceAsStream("/cb_2017_us_state_500k.zip.test");
-    
+
     Assert.assertNotNull(istream);
-    
+
     ShapefileService service = new ShapefileService();
-    
+
     GeoObjectImportConfiguration config = this.getTestConfiguration(istream, service, null, ImportStrategy.NEW_AND_UPDATE);
-    
+
     ServerHierarchyType hierarchyType = ServerHierarchyType.get(USATestData.HIER_ADMIN.getCode());
-    
+
     config.setFunction(testInteger.getName(), new BasicColumnFunction("ALAND"));
     config.setHierarchy(hierarchyType);
-    
+
     ImportHistory hist = mockImport(config);
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.SUCCESS));
-    
+
     istream = this.getClass().getResourceAsStream("/cb_2017_us_state_500k.zip.test");
-    
+
     config = this.getTestConfiguration(istream, service, null, ImportStrategy.NEW_AND_UPDATE);
     config.setFunction(testInteger.getName(), new BasicColumnFunction("ALAND"));
     config.setCopyBlank(false);
-    
+
     HashMap<String, Object> row = new HashMap<String, Object>();
     row.put("ALAND", null);
     row.put("NAME", "Alabama2");
     row.put("GEOID", "01");
-    
-    GeoObjectImporter importer = new GeoObjectImporter(config, new NullImportProgressListener());
-    importer.setFormatSpecificImporter(new NullFormatSpecificImporter());
-    importer.importRow(new MapFeatureRow(row));
-    
+
+    try (GeoObjectImporter importer = new GeoObjectImporter(config, new NullImportProgressListener()))
+    {
+      importer.setFormatSpecificImporter(new NullFormatSpecificImporter());
+      importer.importRow(new MapFeatureRow(row, 0L));
+    }
+
     GeoObject object = ServiceFactory.getRegistryService().getGeoObjectByCode(testData.clientRequest.getSessionId(), "01", USATestData.STATE.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
-    
+
     Assert.assertNotNull(object);
     Assert.assertNotNull(object.getGeometry());
     Assert.assertEquals("Alabama2", object.getLocalizedDisplayLabel());
     Assert.assertEquals(131174431216L, object.getValue(testInteger.getName()));
   }
-  
+
   @Test
   @Request
   public void testImportShapefileWithParent() throws Throwable
@@ -552,9 +559,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.SUCCESS));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     String sessionId = testData.clientRequest.getSessionId();
@@ -599,9 +606,9 @@ public class ShapefileServiceTest
 
     hist = ImportHistory.get(hist.getOid());
 
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     final GeoObjectImportConfiguration test = new GeoObjectImportConfiguration();
@@ -652,9 +659,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.FEEDBACK));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(0), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(0), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.VALIDATION_RESOLVE, hist.getStage().get(0));
 
     final GeoObjectImportConfiguration test = new GeoObjectImportConfiguration();
@@ -698,9 +705,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.SUCCESS));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(0), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(0), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     // Ensure the geo objects were not created
@@ -732,9 +739,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.FEEDBACK));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(0), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(0), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.VALIDATION_RESOLVE, hist.getStage().get(0));
 
     JSONObject page = new JSONObject(new ETLService().getValidationProblems(testData.clientRequest.getSessionId(), hist.getOid(), false, 100, 1).toString());
@@ -775,9 +782,9 @@ public class ShapefileServiceTest
 
       hist = ImportHistory.get(hist.getOid());
       Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
-      Assert.assertEquals(new Long(56), hist.getWorkTotal());
-      Assert.assertEquals(new Long(56), hist.getWorkProgress());
-      Assert.assertEquals(new Long(56), hist.getImportedRecords());
+      Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+      Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+      Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
 
       String sessionId = testData.clientRequest.getSessionId();
       GeoObject object = ServiceFactory.getRegistryService().getGeoObjectByCode(sessionId, "01", USATestData.STATE.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
@@ -812,9 +819,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.FEEDBACK));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(0), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(0), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.VALIDATION_RESOLVE, hist.getStage().get(0));
 
     JSONObject page = new JSONObject(new ETLService().getValidationProblems(testData.clientRequest.getSessionId(), hist.getOid(), false, 100, 1).toString());
@@ -866,8 +873,8 @@ public class ShapefileServiceTest
     Assert.assertTrue("Expected status running or queued, but was [" + hist2.getStatus().get(0) + "]", hist2.getStatus().get(0).equals(AllJobStatus.RUNNING) || hist2.getStatus().get(0).equals(AllJobStatus.QUEUED));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
 
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
@@ -881,8 +888,8 @@ public class ShapefileServiceTest
     SchedulerTestUtils.waitUntilStatus(hist2.getOid(), AllJobStatus.SUCCESS);
 
     hist2 = ImportHistory.get(hist2.getOid());
-    Assert.assertEquals(new Long(56), hist2.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist2.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist2.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist2.getWorkProgress());
 
     Assert.assertEquals(ImportStage.COMPLETE, hist2.getStage().get(0));
   }
@@ -899,37 +906,37 @@ public class ShapefileServiceTest
 
     return ImportHistory.get(historyId);
   }
-  
+
   private ImportHistory mockImport(GeoObjectImportConfiguration config) throws Throwable
   {
     if (config.getStartDate() == null)
     {
       config.setStartDate(new Date());
     }
-    
+
     if (config.getEndDate() == null)
     {
       config.setEndDate(new Date());
     }
-    
+
     config.setImportStrategy(ImportStrategy.NEW_AND_UPDATE);
-    
+
     DataImportJob job = new DataImportJob();
     job.apply();
     ImportHistory hist = (ImportHistory) job.createNewHistory();
-    
+
     config.setHistoryId(hist.getOid());
     config.setJobId(job.getOid());
-    
+
     ServerGeoObjectType type = config.getType();
-    
+
     hist.appLock();
     hist.setImportFileId(config.getVaultFileId());
     hist.setConfigJson(config.toJSON().toString());
     hist.setOrganization(type.getOrganization());
     hist.setGeoObjectTypeCode(type.getCode());
     hist.apply();
-    
+
     ExecutionContext context = job.startSynchronously(hist);
 
     hist = (ImportHistory) context.getHistory();
@@ -954,16 +961,16 @@ public class ShapefileServiceTest
 
     config.addParent(new Location(USATestData.COUNTRY.getServerObject(), hierarchyType, new BasicColumnFunction("LSAD"), ParentMatchStrategy.ALL));
 
-//    ImportHistory hist = mockImport(config);
-//    Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.FEEDBACK));
-    
+    // ImportHistory hist = mockImport(config);
+    // Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.FEEDBACK));
+
     ImportHistory hist = importShapefile(testData.clientRequest.getSessionId(), config.toJSON().toString());
     SchedulerTestUtils.waitUntilStatus(hist.getOid(), AllJobStatus.FEEDBACK);
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(0), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(0), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.VALIDATION_RESOLVE, hist.getStage().get(0));
 
     JSONObject page = new JSONObject(new ETLService().getValidationProblems(testData.clientRequest.getSessionId(), hist.getOid(), false, 100, 1).toString());
@@ -999,15 +1006,15 @@ public class ShapefileServiceTest
 
     ImportHistory hist2 = importShapefile(testData.clientRequest.getSessionId(), hist.getConfigJson());
     Assert.assertEquals(hist.getOid(), hist2.getOid());
-    
+
     SchedulerTestUtils.waitUntilStatus(hist.getOid(), AllJobStatus.RUNNING, 2000);
     SchedulerTestUtils.waitUntilStatus(hist.getOid(), AllJobStatus.SUCCESS);
 
     hist = ImportHistory.get(hist.getOid());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
 
     String sessionId = testData.clientRequest.getSessionId();
     GeoObject go = ServiceFactory.getRegistryService().getGeoObjectByCode(sessionId, "01", USATestData.STATE.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
@@ -1072,7 +1079,8 @@ public class ShapefileServiceTest
    * In the case when the server fails mid import, when the server reboots it's
    * supposed to restart any jobs that were running. When we restart the job, we
    * want to make sure that it picks up from where it left off.
-   * @throws Throwable 
+   * 
+   * @throws Throwable
    */
   @Test
   @Request
@@ -1091,8 +1099,9 @@ public class ShapefileServiceTest
     fakeImportHistory.setStartTime(new Date());
     fakeImportHistory.addStatus(AllJobStatus.RUNNING);
     fakeImportHistory.addStage(ImportStage.IMPORT);
-    fakeImportHistory.setWorkProgress(6L);
+    fakeImportHistory.setWorkProgress(10L);
     fakeImportHistory.setImportedRecords(0L);
+    fakeImportHistory.setCompletedRowsJson(Range.serialize(new TreeSet<>(Arrays.asList(new Range(1, 6)))));
     fakeImportHistory.apply();
 
     JobHistoryRecord record = new JobHistoryRecord(job, fakeImportHistory);
@@ -1115,15 +1124,15 @@ public class ShapefileServiceTest
     fakeImportHistory.setConfigJson(config.toJSON().toString());
     fakeImportHistory.setImportFileId(config.getVaultFileId());
     fakeImportHistory.apply();
-    
+
     ImportHistory hist = importShapefile(testData.clientRequest.getSessionId(), config.toJSON().toString());
 
     SchedulerTestUtils.waitUntilStatus(hist.getOid(), AllJobStatus.SUCCESS);
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(50), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(50), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     for (int i = 0; i < 6; ++i)
@@ -1191,9 +1200,9 @@ public class ShapefileServiceTest
     Assert.assertTrue(hist.getStatus().get(0).equals(AllJobStatus.SUCCESS));
 
     hist = ImportHistory.get(hist.getOid());
-    Assert.assertEquals(new Long(56), hist.getWorkTotal());
-    Assert.assertEquals(new Long(56), hist.getWorkProgress());
-    Assert.assertEquals(new Long(56), hist.getImportedRecords());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkTotal());
+    Assert.assertEquals(Long.valueOf(56), hist.getWorkProgress());
+    Assert.assertEquals(Long.valueOf(56), hist.getImportedRecords());
     Assert.assertEquals(ImportStage.COMPLETE, hist.getStage().get(0));
 
     GeoObject object = ServiceFactory.getRegistryService().getGeoObjectByCode(testData.clientRequest.getSessionId(), "01", USATestData.HEALTH_POST.getCode(), TestDataSet.DEFAULT_OVER_TIME_DATE);
